--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.zoneinfo==0.2.1
 dj-database-url==1.0.0
 Django==4.1
 django-allauth==0.51.0
+gunicorn==20.1.0
 oauthlib==3.2.0
 psycopg2-binary==2.9.3
 PyJWT==2.4.0
