--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 crispy-bootstrap5==0.6
-dj-database-url==1.0.0
-Django==3.0.1
+dj-database-url==0.5.0
+Django==3.2
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
 gunicorn==20.1.0
 oauthlib==3.2.0
 Pillow==9.2.0
+psycopg2==2.8.6
 psycopg2-binary==2.9.3
 PyJWT==2.4.0
 python3-openid==3.2.0
