--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1
 boto3==1.24.66
 botocore==1.27.66
 crispy-bootstrap5==0.6
@@ -20,3 +20,4 @@ pytz==2022.2.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
 sqlparse==0.4.2
+stripe==4.1.0
