--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1;python_version<"3.9"
 boto3==1.24.66
 botocore==1.27.66
+coverage==6.5.0
 crispy-bootstrap5==0.6
 dj-database-url==0.5.0
 Django==3.2
