--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
+django-phonenumber-field==7.0.2
 django-storages==1.13.1
 django-summernote==0.8.20.0
 gunicorn==20.1.0
