--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-summernote==0.8.20.0
 gunicorn==20.1.0
 jmespath==1.0.1
 oauthlib==3.2.0
+phonenumbers==8.13.6
 Pillow==9.2.0
 psycopg2==2.8.6
 psycopg2-binary==2.9.3
