--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,46 @@
 asgiref==3.5.2
+autopep8==2.0.1
 backports.zoneinfo==0.2.1;python_version<"3.9"
+black==22.12.0
 boto3==1.24.66
 botocore==1.27.66
+click==8.1.3
 coverage==6.5.0
 crispy-bootstrap5==0.6
 dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
+django-extensions==3.2.1
 django-phonenumber-field==7.0.2
+django-phonenumbers==1.0.1
 django-storages==1.13.1
 django-summernote==0.8.20.0
+exceptiongroup==1.0.4
+graphviz==0.20.1
 gunicorn==20.1.0
+iniconfig==1.1.1
 jmespath==1.0.1
 oauthlib==3.2.0
+pathspec==0.10.3
 phonenumbers==8.13.6
+phonenumberslite==8.13.6
 Pillow==9.2.0
+pluggy==1.0.0
 psycopg2==2.8.6
 psycopg2-binary==2.9.3
+py==1.11.0
+pycodestyle==2.10.0
+pydotplus==2.0.2
 PyJWT==2.4.0
+pytest==7.2.0
+pytest-cov==4.0.0
+pytest-django==4.5.2
 python3-openid==3.2.0
 pytz==2022.2.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
 sqlparse==0.4.2
 stripe==4.1.0
+
+
