--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+async-generator==1.10
 autopep8==2.0.1
 backports.zoneinfo==0.2.1;python_version<"3.9"
 black==22.12.0
@@ -19,9 +20,11 @@ django-summernote==0.8.20.0
 exceptiongroup==1.0.4
 graphviz==0.20.1
 gunicorn==20.1.0
+h11==0.14.0
 iniconfig==1.1.1
 jmespath==1.0.1
 oauthlib==3.2.0
+outcome==1.2.0
 pathspec==0.10.3
 phonenumbers==8.13.6
 phonenumberslite==8.13.6
@@ -33,6 +36,7 @@ py==1.11.0
 pycodestyle==2.10.0
 pydotplus==2.0.2
 PyJWT==2.4.0
+PySocks==1.7.1
 pytest==7.2.0
 pytest-cov==4.0.0
 pytest-django==4.5.2
@@ -40,7 +44,12 @@ python3-openid==3.2.0
 pytz==2022.2.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
+selenium==4.8.2
+sniffio==1.3.0
+sortedcontainers==2.4.0
 sqlparse==0.4.2
 stripe==4.1.0
-
+trio==0.22.0
+trio-websocket==0.9.2
+wsproto==1.2.0
 
