--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ PySocks==1.7.1
 pytest==7.2.0
 pytest-cov==4.0.0
 pytest-django==4.5.2
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2022.2.1
 requests-oauthlib==1.3.1
@@ -48,8 +49,11 @@ selenium==4.8.2
 sniffio==1.3.0
 sortedcontainers==2.4.0
 sqlparse==0.4.2
-stripe==4.1.0
+stripe==5.0.0
+tqdm==4.65.0
 trio==0.22.0
 trio-websocket==0.9.2
+webdriver-manager==3.8.5
 wsproto==1.2.0
+
 
