--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
 asgiref==3.5.2
 async-generator==1.10
+attrs==24.2.0
 autopep8==2.0.1
-backports.zoneinfo==0.2.1;python_version<"3.9"
 black==22.12.0
+bleach==6.2.0
 boto3==1.24.66
 botocore==1.27.66
+Brotli==1.1.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
 click==8.1.3
 coverage==6.5.0
 crispy-bootstrap5==0.6
+cryptography==43.0.3
+defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.51.0
@@ -21,30 +28,41 @@ exceptiongroup==1.0.4
 graphviz==0.20.1
 gunicorn==20.1.0
 h11==0.14.0
+idna==3.10
 iniconfig==1.1.1
 jmespath==1.0.1
+mypy-extensions==1.0.0
 oauthlib==3.2.0
 outcome==1.2.0
+packaging==24.2
 pathspec==0.10.3
 phonenumbers==8.13.6
 phonenumberslite==8.13.6
 Pillow==9.2.0
+platformdirs==4.3.6
 pluggy==1.0.0
-psycopg2-binary==2.9.3
+psycopg2==2.8.6
+psycopg2-binary==2.9.10
 py==1.11.0
 pycodestyle==2.10.0
+pycparser==2.22
 pydotplus==2.0.2
 PyJWT==2.4.0
+pyparsing==3.2.0
 PySocks==1.7.1
 pytest==7.2.0
 pytest-cov==4.0.0
 pytest-django==4.5.2
+python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2022.2.1
+requests==2.32.3
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
 selenium==4.8.2
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 sqlparse==0.4.2
@@ -52,7 +70,8 @@ stripe==5.0.0
 tqdm==4.65.0
 trio==0.22.0
 trio-websocket==0.9.2
+urllib3==1.26.20
 webdriver-manager==3.8.5
+webencodings==0.5.1
+whitenoise==6.8.2
 wsproto==1.2.0
-
-
