--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+psycopg2==2.8.6; sys_platform == "linux"
+psycopg2-binary==2.9.10; sys_platform == "darwin" or sys_platform == "win32"
 asgiref==3.5.2
 async-generator==1.10
 attrs==24.2.0
@@ -41,8 +43,8 @@ phonenumberslite==8.13.6
 Pillow==9.2.0
 platformdirs==4.3.6
 pluggy==1.0.0
-psycopg2==2.8.6
-psycopg2-binary==2.9.10
+# psycopg2==2.8.6
+# psycopg2-binary==2.9.10
 py==1.11.0
 pycodestyle==2.10.0
 pycparser==2.22
